HTML Russian.salad recipe committed.

--- a/Recipe/Russian.salad.html
+++ b/Recipe/Russian.salad.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RUSSIAN SALAD</title>
+    <title>RUSSIAN SALAD RECIPE</title>
     <h1><center>HOW TO MAKE RUSSIAN SALAD?</center></h1>
 </head>
 
@@ -11,10 +11,10 @@
 
      <div>
             <h2>Ingredients:</h2>
-        </div>
+     </div>
 
         <div>
-            <img src="rusalad.jpg" width="410" align ="left">
+            <img src="Russian.salad.jpg" width="410" align ="left">
             <li>6 potatoes, peeled</li>
             <br>
             <li>1 carrot, or more to taste</li>
